package bouncers;

import java.awt.*;

public interface Renderer {
    void display(Graphics2D g, Bouncable b);
}